--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">epreuveBaptiste</string>
+    <string name="app_name">Ciné Baptiste</string>
+    <string name="loading">Loading movies…</string>
+    <string name="no_movies">No movies found.</string>
+    <string name="error_prefix">Error: </string>
 </resources>
